--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -206,9 +206,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Translate.svg&amp;filetimestamp=20240222145016&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Translate.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Translate.html" title="Sketcher Translate">P&#345;esun/transformace pole</a>: P&#345;esouv&aacute; nebo voliteln&#283; vytv&aacute;&#345;&iacute; kopie vybran&yacute;ch prvk&#367;. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Rotate.svg&amp;filetimestamp=20240101115504&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Rotate.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Rotate.html" title="Sketcher Rotate">Rotace/Polarn&iacute; transformace</a>: Ot&aacute;&#269;&iacute; nebo voliteln&#283; vytv&aacute;&#345;&iacute; oto&#269;en&eacute; kopie vybran&yacute;ch prvk&#367;. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Scale.svg&amp;filetimestamp=20240207133809&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Scale.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Scale.html" title="Sketcher Scale">M&#283;&#345;&iacute;tko</a>: Zm&#283;n&iacute; m&#283;&#345;&iacute;tko nebo voliteln&#283; vytvo&#345;&iacute; kopie vybran&yacute;ch prvk&#367; v m&#283;&#345;&iacute;tku. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Offset.svg&amp;filetimestamp=20240101115402&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Offset.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Offset.html" title="Sketcher Offset">Offset</a>: Creates equidistant edges around selected edges. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Offset.svg&amp;filetimestamp=20240101115402&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Offset.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Offset.html" title="Sketcher Offset">Odsazen&iacute;</a>: Vytvo&#345;&iacute; rovnom&#283;rn&#283; vzd&aacute;len&eacute; hrany kolem vybran&yacute;ch hran. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Symmetry.svg&amp;filetimestamp=20240101115730&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Symmetry.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Symmetry.html" title="Sketcher Symmetry">Mirror</a>: Creates mirrored copies of selected elements.</li></ul>
 </div>
@@ -614,13 +612,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118130450
+Cached time: 20260118130554
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.441 seconds
-Real time usage: 0.679 seconds
-Preprocessor visited node count: 1458/1000000
+CPU time usage: 0.513 seconds
+Real time usage: 2.013 seconds
+Preprocessor visited node count: 1457/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -630,19 +628,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.791      1 -total
- 14.95%    7.147      1 Template:Userdocnavi/cs
- 14.13%    6.755      1 Template:Sketcher_Tools_navi/cs
- 10.44%    4.991      6 Template:Caption
-  9.76%    4.665      2 Template:Navigation_menu_2
-  8.66%    4.138      5 Template:MenuCommand
-  7.96%    3.805      1 Template:PropertyView
-  7.90%    3.777     14 Template:KEY
-  6.82%    3.260      2 Template:Docnav
-  6.76%    3.230     34 Template:Version
+100.00%  118.074      1 -total
+ 18.17%   21.451      1 Template:Sketcher_Tools_navi/cs
+ 17.20%   20.309      1 Template:Userdocnavi/cs
+ 16.32%   19.272      1 Template:PropertyView
+ 14.77%   17.445      2 Template:Navigation_menu_2
+ 12.08%   14.264      8 Template:VersionPlus
+  9.39%   11.088      1 Template:Variable
+  6.69%    7.900     14 Template:KEY
+  6.55%    7.728     34 Template:Version
+  4.55%    5.378      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118130450 and revision id 1740519. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118130551 and revision id 1740521. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
