--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -208,9 +208,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Scale.svg&amp;filetimestamp=20240207133809&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Scale.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Scale.html" title="Sketcher Scale">M&#283;&#345;&iacute;tko</a>: Zm&#283;n&iacute; m&#283;&#345;&iacute;tko nebo voliteln&#283; vytvo&#345;&iacute; kopie vybran&yacute;ch prvk&#367; v m&#283;&#345;&iacute;tku. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Offset.svg&amp;filetimestamp=20240101115402&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Offset.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Offset.html" title="Sketcher Offset">Odsazen&iacute;</a>: Vytvo&#345;&iacute; rovnom&#283;rn&#283; vzd&aacute;len&eacute; hrany kolem vybran&yacute;ch hran. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Symmetry.svg&amp;filetimestamp=20240101115730&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Symmetry.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Symmetry.html" title="Sketcher Symmetry">Zrcadlen&iacute;</a>: Vytvo&#345;&iacute; zrcadlen&eacute; kopie vybran&yacute;ch prvk&#367;.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_RemoveAxesAlignment.svg&amp;filetimestamp=20240101115445&amp;.html" class="mw-file-description"><img src="../File/Sketcher_RemoveAxesAlignment.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_RemoveAxesAlignment.html" title="Sketcher RemoveAxesAlignment">Remove Axes Alignment</a>: Removes the axes alignment of selected edges by replacing <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">horizontal</a> and <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">vertical</a> constraints with <a href="../Sketcher_ConstrainParallel.html" title="Sketcher ConstrainParallel">parallel</a> and <a href="../Sketcher_ConstrainPerpendicular.html" title="Sketcher ConstrainPerpendicular">perpendicular</a> constraints.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_RemoveAxesAlignment.svg&amp;filetimestamp=20240101115445&amp;.html" class="mw-file-description"><img src="../File/Sketcher_RemoveAxesAlignment.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_RemoveAxesAlignment.html" title="Sketcher RemoveAxesAlignment">Odstranit vyrovn&aacute;n&iacute; os</a>: Odstran&iacute; zarovn&aacute;n&iacute; os vybran&yacute;ch hran nahrazen&iacute;m <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">horizont&aacute;ln&iacute;ch</a> a <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">vertik&aacute;ln&iacute;ch</a> vazeb <a href="../Sketcher_ConstrainParallel.html" title="Sketcher ConstrainParallel">paraleln&iacute;mi</a> a <a href="../Sketcher_ConstrainPerpendicular.html" title="Sketcher ConstrainPerpendicular">kolm&yacute;mi</a> vazbami.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_DeleteAllGeometry.svg&amp;filetimestamp=20240101171728&amp;.html" class="mw-file-description"><img src="../File/Sketcher_DeleteAllGeometry.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_DeleteAllGeometry.html" title="Sketcher DeleteAllGeometry">Delete All Geometry</a>: Deletes all geometry and all constraints from the sketch.</li></ul>
 </div>
@@ -610,13 +608,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118130633
+Cached time: 20260118130847
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.434 seconds
-Real time usage: 0.722 seconds
-Preprocessor visited node count: 1456/1000000
+CPU time usage: 0.410 seconds
+Real time usage: 0.763 seconds
+Preprocessor visited node count: 1455/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -626,19 +624,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.668      1 -total
- 24.64%    8.788      1 Template:Sketcher_Tools_navi/cs
- 13.34%    4.759      2 Template:Navigation_menu_2
- 10.56%    3.766     34 Template:Version
-  9.37%    3.341      1 Template:Userdocnavi/cs
-  8.10%    2.888      2 Template:Docnav
-  8.04%    2.866      1 Template:PropertyView
-  5.87%    2.093      8 Template:VersionPlus
-  5.64%    2.011      6 Template:Caption
-  5.01%    1.787     14 Template:KEY
+100.00%   70.911      1 -total
+ 19.70%   13.969      1 Template:Userdocnavi/cs
+ 18.94%   13.433      6 Template:Caption
+ 13.71%    9.725      1 Template:Sketcher_Tools_navi/cs
+  9.88%    7.006      2 Template:Verze
+  9.63%    6.830     34 Template:Version
+  8.37%    5.935      2 Template:Navigation_menu_2
+  4.60%    3.262      1 Template:PropertyView
+  3.67%    2.603      2 Template:Docnav
+  3.13%    2.218      8 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118130632 and revision id 1740523. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118130846 and revision id 1740525. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
