--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -210,9 +210,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Symmetry.svg&amp;filetimestamp=20240101115730&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Symmetry.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Symmetry.html" title="Sketcher Symmetry">Zrcadlen&iacute;</a>: Vytvo&#345;&iacute; zrcadlen&eacute; kopie vybran&yacute;ch prvk&#367;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_RemoveAxesAlignment.svg&amp;filetimestamp=20240101115445&amp;.html" class="mw-file-description"><img src="../File/Sketcher_RemoveAxesAlignment.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_RemoveAxesAlignment.html" title="Sketcher RemoveAxesAlignment">Odstranit vyrovn&aacute;n&iacute; os</a>: Odstran&iacute; zarovn&aacute;n&iacute; os vybran&yacute;ch hran nahrazen&iacute;m <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">horizont&aacute;ln&iacute;ch</a> a <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">vertik&aacute;ln&iacute;ch</a> vazeb <a href="../Sketcher_ConstrainParallel.html" title="Sketcher ConstrainParallel">paraleln&iacute;mi</a> a <a href="../Sketcher_ConstrainPerpendicular.html" title="Sketcher ConstrainPerpendicular">kolm&yacute;mi</a> vazbami.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_DeleteAllGeometry.svg&amp;filetimestamp=20240101171728&amp;.html" class="mw-file-description"><img src="../File/Sketcher_DeleteAllGeometry.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_DeleteAllGeometry.html" title="Sketcher DeleteAllGeometry">Odstranit ve&scaron;kerou geometrii</a>: Odstran&iacute; ve&scaron;kerou geometrii a v&scaron;echna omezen&iacute; ze skici.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_DeleteAllConstraints.svg&amp;filetimestamp=20240101171808&amp;.html" class="mw-file-description"><img src="../File/Sketcher_DeleteAllConstraints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_DeleteAllConstraints.html" title="Sketcher DeleteAllConstraints">Delete All Constraints</a>: Deletes all constraints from the sketch.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_DeleteAllConstraints.svg&amp;filetimestamp=20240101171808&amp;.html" class="mw-file-description"><img src="../File/Sketcher_DeleteAllConstraints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_DeleteAllConstraints.html" title="Sketcher DeleteAllConstraints">Odebere v&scaron;echny vazby</a>: Odebere v&scaron;echny vazby ze skici.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span id="Sketcher_CopyClipboard"><span typeof="mw:File"><a href="../index.php?title=Edit-copy.svg&amp;filetimestamp=20240704192520&amp;.html" class="mw-file-description"><img src="../File/Edit-copy.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Copy Elements: See <a href="#Copy,_cut_and_paste">Copy, cut and paste</a>.</span></li></ul>
 </div>
@@ -606,13 +604,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118130935
+Cached time: 20260118131051
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.424 seconds
-Real time usage: 0.704 seconds
-Preprocessor visited node count: 1454/1000000
+CPU time usage: 0.431 seconds
+Real time usage: 0.779 seconds
+Preprocessor visited node count: 1453/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -622,19 +620,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.240      1 -total
- 21.11%    7.860      1 Template:Sketcher_Tools_navi/cs
- 14.49%    5.397      2 Template:Navigation_menu_2
- 10.80%    4.023      1 Template:Userdocnavi/cs
- 10.21%    3.802      1 Template:PropertyView
-  7.24%    2.698      5 Template:MenuCommand
-  6.92%    2.578     34 Template:Version
-  6.24%    2.325      2 Template:Docnav
-  5.52%    2.055      1 Template:Variable
-  5.27%    1.962     14 Template:KEY
+100.00%   59.676      1 -total
+ 17.12%   10.215      1 Template:PropertyView
+ 15.96%    9.526      1 Template:Sketcher_Tools_navi/cs
+ 10.28%    6.132     34 Template:Version
+  9.42%    5.620      1 Template:Variable
+  8.79%    5.244      2 Template:Navigation_menu_2
+  8.53%    5.091      8 Template:VersionPlus
+  7.73%    4.610      1 Template:Userdocnavi/cs
+  7.27%    4.337      6 Template:Caption
+  5.96%    3.554      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118130935 and revision id 1740527. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118131050 and revision id 1740529. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
