--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -211,9 +211,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_RemoveAxesAlignment.svg&amp;filetimestamp=20240101115445&amp;.html" class="mw-file-description"><img src="../File/Sketcher_RemoveAxesAlignment.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_RemoveAxesAlignment.html" title="Sketcher RemoveAxesAlignment">Odstranit vyrovn&aacute;n&iacute; os</a>: Odstran&iacute; zarovn&aacute;n&iacute; os vybran&yacute;ch hran nahrazen&iacute;m <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">horizont&aacute;ln&iacute;ch</a> a <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">vertik&aacute;ln&iacute;ch</a> vazeb <a href="../Sketcher_ConstrainParallel.html" title="Sketcher ConstrainParallel">paraleln&iacute;mi</a> a <a href="../Sketcher_ConstrainPerpendicular.html" title="Sketcher ConstrainPerpendicular">kolm&yacute;mi</a> vazbami.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_DeleteAllGeometry.svg&amp;filetimestamp=20240101171728&amp;.html" class="mw-file-description"><img src="../File/Sketcher_DeleteAllGeometry.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_DeleteAllGeometry.html" title="Sketcher DeleteAllGeometry">Odstranit ve&scaron;kerou geometrii</a>: Odstran&iacute; ve&scaron;kerou geometrii a v&scaron;echna omezen&iacute; ze skici.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_DeleteAllConstraints.svg&amp;filetimestamp=20240101171808&amp;.html" class="mw-file-description"><img src="../File/Sketcher_DeleteAllConstraints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_DeleteAllConstraints.html" title="Sketcher DeleteAllConstraints">Odebrat v&scaron;echny vazby</a>: Odebere v&scaron;echny vazby ze skici.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span id="Sketcher_CopyClipboard"><span typeof="mw:File"><a href="../index.php?title=Edit-copy.svg&amp;filetimestamp=20240704192520&amp;.html" class="mw-file-description"><img src="../File/Edit-copy.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Copy Elements: See <a href="#Copy,_cut_and_paste">Copy, cut and paste</a>.</span></li></ul>
-</div>
+<ul><li><span id="Sketcher_CopyClipboard"><span typeof="mw:File"><a href="../index.php?title=Edit-copy.svg&amp;filetimestamp=20240704192520&amp;.html" class="mw-file-description"><img src="../File/Edit-copy.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Kop&iacute;rov&aacute;n&iacute; prvk&#367;: Viz <a href="#Copy,_cut_and_paste">Kop&iacute;rov&aacute;n&iacute;, vyjmut&iacute; a vlo&#382;en&iacute;</a>.</span></li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span id="Sketcher_Cut"><span typeof="mw:File"><a href="../index.php?title=Edit-cut.svg&amp;filetimestamp=20240704192537&amp;.html" class="mw-file-description"><img src="../File/Edit-cut.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cut Elements: See <a href="#Copy,_cut_and_paste">Copy, cut and paste</a>.</span></li></ul>
 </div>
@@ -604,13 +602,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118131201
+Cached time: 20260118131342
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.401 seconds
-Real time usage: 0.547 seconds
-Preprocessor visited node count: 1453/1000000
+CPU time usage: 0.499 seconds
+Real time usage: 1.464 seconds
+Preprocessor visited node count: 1452/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -620,19 +618,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.423      1 -total
- 23.54%    7.396      1 Template:Sketcher_Tools_navi/cs
- 15.39%    4.834      2 Template:Navigation_menu_2
- 13.75%    4.320      1 Template:Userdocnavi/cs
- 11.04%    3.468      1 Template:PropertyView
-  7.75%    2.434      2 Template:Docnav
-  6.62%    2.079     34 Template:Version
-  5.97%    1.877      1 Template:Variable
-  4.82%    1.514     14 Template:KEY
-  4.76%    1.497      6 Template:Caption
+100.00%   69.933      1 -total
+ 25.88%   18.099      1 Template:TOCright
+ 17.82%   12.460      1 Template:Sketcher_Tools_navi/cs
+ 10.38%    7.262      2 Template:Docnav
+ 10.29%    7.199      2 Template:Navigation_menu_2
+  9.35%    6.537      1 Template:Userdocnavi/cs
+  9.20%    6.435      1 Template:PropertyView
+  4.89%    3.419      1 Template:Variable
+  3.82%    2.673      8 Template:VersionPlus
+  3.78%    2.647     34 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118131200 and revision id 1740531. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118131340 and revision id 1740533. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
