--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -216,9 +216,9 @@
 <ul><li><span id="Sketcher_Cut"><span typeof="mw:File"><a href="../index.php?title=Edit-cut.svg&amp;filetimestamp=20240704192537&amp;.html" class="mw-file-description"><img src="../File/Edit-cut.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Vyjmut&iacute; prvk&#367;: Viz <a href="#Copy,_cut_and_paste">Kop&iacute;rov&aacute;n&iacute;, vyjmut&iacute; a vlo&#382;en&iacute;</a>.<span id="Sketcher_Cut"></span>]].</span></li></ul>
 </div>
 <ul><li><span id="Sketcher_Paste"><span typeof="mw:File"><a href="../index.php?title=Edit-paste.svg&amp;filetimestamp=20240704192705&amp;.html" class="mw-file-description"><img src="../File/Edit-paste.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Vlo&#382;en&iacute; prvk&#367;: Viz <a href="#Copy,_cut_and_paste">Kop&iacute;rov&aacute;n&iacute;, vyjmut&iacute; a vlo&#382;en&iacute;</a>.</span></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="B-Spline_Tools">B-Spline Tools</span></h3>
-</div>
+<p><span id="B-Spline_Tools"></span>
+</p>
+<h3><span id="N.C3.A1stroje_B-Spline"></span><span class="mw-headline" id="N&aacute;stroje_B-Spline">N&aacute;stroje B-Spline</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineConvertToNURBS.svg&amp;filetimestamp=20240331101832&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineConvertToNURBS.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineConvertToNURBS.html" title="Sketcher BSplineConvertToNURBS">Geometry to B-Spline</a>: Converts edges to B-splines.</li></ul>
 </div>
@@ -600,12 +600,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118131814
+Cached time: 20260118131840
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.449 seconds
-Real time usage: 0.693 seconds
+CPU time usage: 0.406 seconds
+Real time usage: 0.582 seconds
 Preprocessor visited node count: 1452/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
@@ -616,19 +616,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.123      1 -total
- 23.60%    8.997      1 Template:Sketcher_Tools_navi/cs
- 16.19%    6.171      2 Template:Navigation_menu_2
- 14.63%    5.576      1 Template:Userdocnavi/cs
- 10.99%    4.189      2 Template:Docnav
-  8.75%    3.335      1 Template:PropertyView
-  6.52%    2.485     34 Template:Version
-  5.29%    2.017      8 Template:VersionPlus
-  5.22%    1.990      5 Template:MenuCommand
-  4.59%    1.749      1 Template:Variable
+100.00%   30.970      1 -total
+ 21.62%    6.697      1 Template:Sketcher_Tools_navi/cs
+ 16.64%    5.154      1 Template:Userdocnavi/cs
+ 16.44%    5.092      2 Template:Navigation_menu_2
+  8.59%    2.661      2 Template:Docnav
+  8.50%    2.632      1 Template:PropertyView
+  7.15%    2.216     34 Template:Version
+  7.02%    2.173      6 Template:Caption
+  4.57%    1.415      8 Template:VersionPlus
+  4.39%    1.360      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118131814 and revision id 1740541. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118131839 and revision id 1740543. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
